# DateMCP

./: .gitignore  README.md  TODO.md  VS_CODE_CONFIG.md  date_mcp.py  pyproject.toml
src/: __init__.py
