[project]
name = "date-mcp"
version = "0.1.0"
description = "MCP server providing current date and day name tools"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
date-mcp = "src.date_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
